force-app/main/default/objects/Charging_Station__c/Charging_Station__c.object-meta.xml
<CustomObject>
    <description>Charging Station details</description>
    <label>Charging Station</label>
    <nameField>
        <label>Charging Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charging Station</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>