force-app/main/default/objects/Charging_Station__c/fields/Battery_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Battery_Capacity__c</fullName>
    <label>Battery Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10kw</fullName>
                <default>true</default>
                <label>10kw</label>
            </value>
            <value>
                <fullName>2kw</fullName>
            </value>
            <value>
                <fullName>4kw</fullName>
            </value>
            <value>
                <fullName>5kw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>