force-app/main/default/objects/Charging_Station__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bangalore</fullName>
                <default>true</default>
                <label>Bangalore</label>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Mysuru</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>