force-app/main/default/objects/Charging_Station__c/fields/Compatible_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Compatible_Vehicle__c</fullName>
    <label>Compatible Vehicle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>4 Wheeler</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>