force-app/main/default/objects/Charging_Station__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andhra Pradesh</fullName>
                <default>true</default>
                <label>Andhra Pradesh</label>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>